--- a/splat/build.xml
+++ b/splat/build.xml
@@ -517,11 +517,11 @@
         <attribute name="Main-Class"
                    value="uk.ac.starlink.splat.iface.SplatBrowserMain"/>
         <attribute name="Class-Path"
-value="bsh-1.2b7.jar splat_colt.jar diva.jar jdom.jar jhall.jar splat_help.jar
+value="bsh-1.2b7.jar splat_colt.jar jdom.jar jhall.jar splat_help.jar
 jsci_core.jar jsci_wavelet.jar ../astgui/astgui.jar ../ndx/ndx.jar 
 ../hdx/hdx.jar ../array/array.jar ../tamfits/tamfits.jar ../jniast/jniast.jar 
 ../soapserver/soapserver.jar ../fits/fits.jar ../hds/hds.jar 
-../treeview/treeview.jar ../pal/pal.jar"/>
+../treeview/treeview.jar ../pal/pal.jar ../diva/diva.jar"/>
       </manifest>
     </jar>
   </target>
