--- a/treeview/build.xml
+++ b/treeview/build.xml
@@ -1188,6 +1188,22 @@
 
   </target>
 
+  <target name="fullui"
+          depends="compile-tests">
+
+    <!-- Run up Treeview from the local build, setup to be debugged from socket -->
+    <java classname="uk.ac.starlink.treeview.Driver" fork="true">
+      <classpath refid="tests-classpath"/>
+      <jvmarg value="-Duk.ac.starlink.treeview.cmdname=treeview"/>
+      <jvmarg value="-Duk.ac.starlink.treeview.demodir=${src.etc}/demo"/>
+      <jvmarg value="-Xdebug"/>
+      <jvmarg value="-Xnoagent"/>
+      <jvmarg value="-Djava.compiler=NONE"/>
+      <jvmarg value="-Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=7002"/>
+    </java>
+
+  </target>
+
   <!--
    ! Get a DTD for this build file. Documentation suggests may be incomplete!
    !
