--- a/templates/classlibrary/build.xml
+++ b/templates/classlibrary/build.xml
@@ -427,8 +427,7 @@
          basedir="${build.classes}">
       <manifest>
         <attribute name="Built-By" value="${user.name}"/>
-        <attribute name="Class-Path"
-            value="../package1/package1.jar ../package2/package2.jar {...}"/>
+        <attribute name="Class-Path" value="${jar.class.path}"/>
       </manifest>
     </jar>
 
