--- a/util/build.xml
+++ b/util/build.xml
@@ -367,8 +367,7 @@
          basedir="${build.classes}">
       <manifest>
         <attribute name="Built-By" value="${user.name}"/>
-        <attribute name="Class-Path"
-                  value="../junit/junit.jar ../ant.jar"/>
+        <attribute name="Class-Path" value="${jar.class.path}"/>
       </manifest>
     </jar>
 
