--- a/array/build.xml
+++ b/array/build.xml
@@ -417,8 +417,7 @@
     <jar destfile="${dist.lib.pkg}/${name}.jar" basedir="${build.classes}">
       <manifest>
         <attribute name="Built-By" value="${user.name}"/>
-        <attribute name="Class-Path" 
-                   value="../junit/junit.jar ../util/util.jar ../hds/hds.jar ../fits/fits.jar"/>
+        <attribute name="Class-Path" value="${jar.class.path}"/>
       </manifest>
     </jar>
 
