--- a/fits/build.xml
+++ b/fits/build.xml
@@ -413,8 +413,7 @@
          basedir="${build.classes}">
       <manifest>
         <attribute name="Built-By" value="${user.name}"/>
-        <attribute name="Class-Path" 
-                   value="../junit/junit.jar ../tamfits/tamfits.jar ../array/array.jar ../hdx/hdx.jar ../ndx/ndx.jar ../jniast/jniast.jar ../table/table.jar ../util/util.jar"/>
+        <attribute name="Class-Path" value="${jar.class.path}"/>
       </manifest>
     </jar>
 
