--- a/hds/build.xml
+++ b/hds/build.xml
@@ -366,8 +366,7 @@
          basedir="${build.classes}">
       <manifest>
         <attribute name="Built-By" value="${user.name}"/>
-        <attribute name="Class-Path" 
-                   value="../junit/junit.jar ../jnihds/jnihds.jar ../hdx/hdx.jar"/>
+        <attribute name="Class-Path" value="${jar.class.path}"/>
       </manifest>
     </jar>
 
