--- a/hdx/build.xml
+++ b/hdx/build.xml
@@ -411,11 +411,7 @@
          basedir="${build.classes}">
       <manifest>
         <attribute name="Built-By" value="${user.name}"/>
-        <attribute name="Class-Path" 
-                   value="
-          ../fits/fits.jar
-          ../hds/hds.jar
-          ../jniast/jniast.jar"/>
+        <attribute name="Class-Path" value="${jar.class.path}"/>
       </manifest>
     </jar>
   </target>
