--- a/ndx/build.xml
+++ b/ndx/build.xml
@@ -395,9 +395,7 @@
          basedir="${build.classes}">
       <manifest>
         <attribute name="Built-By" value="${user.name}"/>
-        <attribute name="Class-Path" 
-         value="../junit/junit.jar ../array/array.jar ../jniast/jniast.jar
-                ../util/util.jar ../hdx/hdx.jar"/>
+        <attribute name="Class-Path" value="${jar.class.path}"/>
       </manifest>
     </jar>
 
