--- a/soapserver/build.xml
+++ b/soapserver/build.xml
@@ -400,8 +400,7 @@
          basedir="${build.classes}">
       <manifest>
         <attribute name="Built-By" value="${user.name}"/>
-        <attribute name="Class-Path" 
-                   value="../axis/axis.jar ../jetty/org.mortbay.jetty.jar"/>
+        <attribute name="Class-Path" value="${jar.class.path}"/>
       </manifest>
     </jar>
   </target>
