--- a/table/build.xml
+++ b/table/build.xml
@@ -372,8 +372,7 @@
         <attribute name="Main-Class" 
                    value="uk.ac.starlink.table.TableCopy"/>
         <attribute name="Built-By" value="${user.name}"/>
-        <attribute name="Class-Path" 
-                   value="../util/util.jar ../votable/votable.jar ../fits/fits.jar ../mirage/mirage.jar"/>
+        <attribute name="Class-Path" value="${jar.class.path}"/>
       </manifest>
     </jar>
 
