--- a/templates/application/build.xml
+++ b/templates/application/build.xml
@@ -426,8 +426,7 @@
       <manifest>
         <attribute name="Built-By" value="${user.name}"/>
         <attribute name="Main-Class" value="{package.main.class}"/>
-        <attribute name="Class-Path"
-           value="../package1/package1.jar ../package2/package2.jar {...}"/>
+        <attribute name="Class-Path" value="${jar.class.path}"/>
       </manifest>
     </jar>
 
