Removed erroneous double quotes from all .properties files.

--- a/frog/.properties
+++ b/frog/.properties
@@ -1,4 +1,4 @@
-jar.class.path="bsh-1.1a18.jar colt.jar diva.jar jama.jar jdom.jar jhall.jar \
+jar.class.path=bsh-1.1a18.jar colt.jar diva.jar jama.jar jdom.jar jhall.jar \
 ../astgui/astgui.jar ../ndx/ndx.jar ../array/array.jar ../tamfits/tamfits.jar \
 ../jniast/jniast.jar ../fits/fits.jar ../hds/hds.jar../table/table.jar \
-../topcat/topcat.jar"
+../topcat/topcat.jar
