--- a/ndtools/.properties
+++ b/ndtools/.properties
@@ -1,1 +1,1 @@
-jar.class.path="../ndx/ndx.jar ../array/array.jar ../task/task.jar"
+jar.class.path=../ndx/ndx.jar ../array/array.jar ../task/task.jar
