--- a/ndx/.properties
+++ b/ndx/.properties
@@ -1,2 +1,2 @@
-jar.class.path="../junit/junit.jar ../array/array.jar ../jniast/jniast.jar \
-../util/util.jar ../hdx/hdx.jar"
+jar.class.path=../junit/junit.jar ../array/array.jar ../jniast/jniast.jar \
+../util/util.jar ../hdx/hdx.jar
