--- a/topcat/.properties
+++ b/topcat/.properties
@@ -1,2 +1,2 @@
-jar.class.path="plot.jar jel_g.jar jhall.jar ../util/util.jar \
-../table/table.jar ../mirage/mirage.jar ../treeview/treeview.jar"
+jar.class.path=plot.jar jel_g.jar jhall.jar ../util/util.jar \
+../table/table.jar ../mirage/mirage.jar ../treeview/treeview.jar
