--- a/array/.properties
+++ b/array/.properties
@@ -1,2 +1,2 @@
-jar.class.path="../junit/junit.jar ../util/util.jar ../hds/hds.jar \
-../fits/fits.jar"
+jar.class.path=../junit/junit.jar ../util/util.jar ../hds/hds.jar \
+../fits/fits.jar
