--- a/axis/.properties
+++ b/axis/.properties
@@ -1,2 +1,2 @@
-jar.class.path="axis-ant.jar commons-discovery.jar jaxrpc.jar \
-saaj.jar commons-logging.jar log4j-1.2.4.jar wsdl4j.jar"
+jar.class.path=axis-ant.jar commons-discovery.jar jaxrpc.jar \
+saaj.jar commons-logging.jar log4j-1.2.4.jar wsdl4j.jar
