--- a/hds/.properties
+++ b/hds/.properties
@@ -1,1 +1,1 @@
-jar.class.path="../junit/junit.jar ../jnihds/jnihds.jar ../hdx/hdx.jar"
+jar.class.path=../junit/junit.jar ../jnihds/jnihds.jar ../hdx/hdx.jar
