--- a/sog/.properties
+++ b/sog/.properties
@@ -1,3 +1,3 @@
-jar.class.path="../jsky/jsky.jar ../array/array.jar ../ndx/ndx.jar \
+jar.class.path=../jsky/jsky.jar ../array/array.jar ../ndx/ndx.jar \
 ../jaiutil/jaiutil.jar ../fits/fits.jar ../hds/hds.jar ../jniast/jniast.jar \
-../soapserver/soapserver.jar ../astgui/astgui.jar"
+../soapserver/soapserver.jar ../astgui/astgui.jar
