--- a/jsky/.properties
+++ b/jsky/.properties
@@ -1,2 +1,2 @@
 jar.class.path=hcompress.jar jel.jar jfreechart.jar jcommon.jar log4j.jar \
-sun-util.jar dom4j.jar ../diva/diva.jar ../tamfits/tamfits.jar
+dom4j.jar ../diva/diva.jar ../tamfits/tamfits.jar
