Added roxes tasks.

--- a/ant/src/main/org/apache/tools/ant/taskdefs/defaults.properties
+++ b/ant/src/main/org/apache/tools/ant/taskdefs/defaults.properties
@@ -183,3 +183,9 @@ listdelete=uk.ac.starlink.ant.tasks.ListDelete
 loggedcopy=uk.ac.starlink.ant.tasks.LoggedCopy
 extdirproperty=uk.ac.starlink.ant.tasks.ExtdirProperty
 
+# roxes ant tasks
+sfx=com.roxes.tools.ant.SFXTask
+jstub=com.roxes.tools.ant.JStubTask
+jnlp=com.roxes.tools.ant.JNLPTask
+preferences=com.roxes.tools.ant.PreferencesTask
+
