--- a/splat/build.xml
+++ b/splat/build.xml
@@ -169,6 +169,18 @@
   <property name="install.log" value=".${name}.install"/>
   <property name="install.overwrite" value="true"/>
 
+  <!-- Local webstart properties. Note this needs a local keystore,
+   !   assumed to be called keystore in $star.build.dir, .. by
+   !   default. -->
+  <property name="webstart.codebase" 
+            value="http://www.starlink.ac.uk/starjava/lib"/>
+  <property name="webstart.alias" value="Starlink-UK"/>
+  <property name="webstart.keystore" value="${star.build.dir}/keystore"/>
+  <property name="webstart.keypass" value="Vroomfondel"/>
+  <property name="webstart.storepass" value="Majikthise"/>
+  <property name="webstart.starlink_logo" value="starlink_logo_med.gif"/>
+  <property name="home.page" value="http://www.starlink.ac.uk/${name}"/>
+
   <!-- Add any local ANT tasks that are required (these should be
    !   moved to ANT if useful beyond the needs of this package) -->
 
@@ -208,6 +220,9 @@
     <!-- PAL -->
     <pathelement location="${star.jar.dir}/pal/pal.jar"/>
 
+    <!-- ASTGUI -->
+    <pathelement location="${star.jar.dir}/astgui/astgui.jar"/>
+
   </extclasspath>
 
   <!-- Generate the local build classpath. This is the most difficult
@@ -233,6 +248,7 @@
     <pathelement location="${star.build.dir}/diva/lib/diva/diva.jar"/>
     <pathelement location="${star.build.dir}/soapserver/lib/soapserver/soapserver.jar"/>
     <pathelement location="${star.build.dir}/pal/lib/pal/pal.jar"/>
+    <pathelement location="${star.build.dir}/astgui/lib/astgui/astgui.jar"/>
   </extclasspath>
 
   <!-- Local third party jars. Normally these will be kept in their
@@ -524,6 +540,85 @@
         <attribute name="Class-Path" value="${jar.class.path}"/>
       </manifest>
     </jar>
+
+    <!-- Sign all jar files -->
+    <signjar alias="${webstart.alias}"
+             keystore="${webstart.keystore}"
+             keypass="${webstart.keypass}"
+             storepass="${webstart.storepass}">
+       <fileset dir="${dist.lib}" includes="**/*.jar **/*.zip"/>
+    </signjar>
+
+  </target>
+
+
+  <!--
+   !   ========================================
+   !   Make package JNLP file for Java webstart
+   !   ========================================
+   !-->
+  <target name="webstart"
+          description="-> create webstart descriptor files">
+
+    <!-- Create a webstart JNLP file for this package, this goes into
+     !   "dist.lib" -->
+    <mkdir dir="${dist.lib}"/>
+    <jnlp toFile="${dist.lib}/${name}.jnlp" href="${name}.jnlp"
+          codebase="${webstart.codebase}">
+      <information>
+         <title>Starlink SPLAT - A Spectral Analysis Tool</title>
+         <vendor>Starlink UK</vendor>
+         <homepage href="${home.page}"/>
+         <icon kind="splash" href="splat_splash.gif"/>
+         <icon href="${webstart.starlink_logo}"/>
+         <description>Starlink SPLAT - Webstart edition</description>
+         <offline_allowed/>
+       </information>
+       <security>
+          <all_permissions/>
+       </security>
+       <resources>
+         <j2se version="1.4+"/>
+         <j2se version="1.4+"/>
+         <jar href="splat/splat.jar" main="true"/>
+         <extension name="SPLAT_PARTS" href="splat-parts.jnlp"/>
+
+         <!-- Decouple potential circular dependencies -->
+         <extension name="TREEVIEW-PARTS" href="treeview-parts.jnlp"/>
+       </resources>
+       <application_desc main_class="uk.ac.starlink.splat.SplatMain"/>
+     </jnlp>
+
+     <!-- May be needed as a component so provide that too -->
+     <jnlp toFile="${dist.lib}/${name}-parts.jnlp" href="${name}-parts.jnlp"
+          codebase="${webstart.codebase}">
+      <information>
+         <title>Starlink SPLAT - A Spectral Analysis Tool</title>
+         <vendor>Starlink UK</vendor>
+         <homepage href="${home.page}"/>
+         <icon kind="splash" href="splat_splash.gif"/>
+         <icon href="${webstart.starlink_logo}"/>
+         <description>"Starlink SPLAT - Webstart edition"</description>
+         <offline_allowed/>
+       </information>
+       <security>
+          <all_permissions/>
+       </security>
+       <resources>
+         <j2se version="1.4+"/>
+         <fileset dir="${dist.lib}" includes="**/*.jar **/*.zip"/>
+         <extension name="ASTGUI" href="astgui.jnlp"/>
+         <extension name="NDX" href="ndx.jnlp"/>
+         <extension name="JNIAST" href="jniast.jnlp"/>
+         <extension name="SOAPSERVER" href="soapserver.jnlp"/>
+         <extension name="FITS" href="fits.jnlp"/>
+         <extension name="HDS" href="hds.jnlp"/>
+         <extension name="PAL" href="pal.jnlp"/>
+         <extension name="DIVA" href="diva.jnlp"/>
+       </resources>
+       <component_desc/>
+     </jnlp>
+
   </target>
 
   <!--
@@ -542,7 +637,7 @@
    !  targets.
    !-->
   <target name="dist"
-          depends="build,jars,javadocs"
+          depends="build,jars,javadocs,webstart"
           unless="runonly.install"
           description="-> configures the local binary distribution">
 
@@ -799,6 +894,7 @@
                 overwrite="${install.overwrite}"
                 logfileAppend="true">
       <fileset dir="${dist.lib}">
+        <include name="**/*.jnlp"/>
         <include name="**/*.jar"/>
         <include name="**/*.zip"/>
         <include name="**/libsplat.*"/>
